	  config files  (probably not complete yet!)
	* libmpio/defs.h (MPIO_CHARSET): 
	* libmpio/directory.c (mpio_dentry_put, mpio_dentry_get_real): 
	  use ISO-8859-15 instead of ASCII as default charset encoding
	  (much nicer now!)
	* libmpio/directory.c (mpio_charset_get, mpio_charset_set): 
	  added functions to allow changing of charset 
	* mpiosh/config.c: read charset from config file

2002-11-04  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_quit): writing configuration
	including history und freeing config reader

	* mpiosh/global.c: modified filename for history
		"~/.mpio/history"

	* mpiosh/config.c (mpiosh_config_new): reading history file
	(mpiosh_config_write): saving current history

2002-11-02  Yuji Touya  <salmoon@users.sourceforge.net>

	* tools/logotool.c: add a tool to extract/change logo animation
         data in config.dat file, and sample animation data.

2002-11-01  Yuji Touya  <salmoon@users.sourceforge.net>

	* kernel/mpio.c: Add usbdevfs filesystem support 

2002-10-29  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/mpiosh.c (mpiosh_init): uses the new configuration file
	support to initialise the shell

	* etc/mpio/mpioshrc: add a sample configuration file will be
	install as a global configuration file in
	@sysconfdir@/mpio/mpioshrc

	* mpiosh/cfgio.c, mpiosh/cfgio.c, mpiosh/config.c,
	mpiosh/config.h: added these new files to support global and user
	configuration files.
			 
2002-10-27  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.{c,h}: split mpio_file_{get,put} into several
	  functions, to allow reading and writing files from/to memory
	  (needed for handling of config files)
	* mpiosh/callback.c (mpiosh_cmd_channel): added function/command
	  channel to handle the radio channel of the *-Plus models
	* libmpio/directory.c (mpio_dentry_put): 
	  another fix for the 8.3 handling needed for the config file
	  (one day this will be bug free ...)
	* mpiosh/callback.c (mpiosh_cmd_config): implement the function